add readme, fix scheduler and add status checker

--- a/src/turtlesim_plus_controller/CMakeLists.txt
+++ b/src/turtlesim_plus_controller/CMakeLists.txt
@@ -30,6 +30,7 @@ install(PROGRAMS
   scripts/turtle_controller.py
   scripts/turtle_scheduler.py
   scripts/path_generator.py
+  scripts/status_checker.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
